# rustle-pkcs11

./: Cargo.toml  softhsm.conf
certs/: cer.crt  cer.der  key.der  key.pem
src/: client.rs  main.rs  pkcs11.rs
tokens/bc58deef-da9b-393f-f986-3b5a10c66ef9/: 4ef91aa7-fc74-2b45-5768-de94fc2720d4.object  9cd177cd-bb6d-decf-434e-c1cfd57e6b4c.object  aa439968-f1da-b796-378e-8a5f95398756.object  c6369823-6a5e-945d-e039-cc70c97250de.object  token.object
