[package]
name = "pkcs11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptoki = "*"
x509-certificate = "*"
rustls = "*"
hyper-rustls = "*" 
hyper = {version="*", features = ["full"]}
tokio = {version = "*", features = ["full"]}
futures = "*"

[dev-dependencies]
tokio-rustls = "*"
tls-listener =  { version = "*", features = ["hyper-h1", "rustls"] }